--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,6 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          npx gh-pages@3.1.0 --dist dist
+          NODE_DEBUG=gh-pages npx gh-pages@3.1.0 --dist dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
